manifests/ghost/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost
spec:
  type: ClusterIP
  selector:
    app: ghost
  ports:
  - name: http
    port: 2368
    targetPort: 2368
